--- a/css/styles.css
+++ b/css/styles.css
@@ -48,3 +48,38 @@ table {
 }
 
 /*my code.*/
+h1{
+    font-size:40px;
+    color:#7f7f7f;
+    text-align: center;
+    margin: 20px;
+}
+
+#calWrap{
+    width:240px;
+    margin:30px auto; 
+}
+td button{
+    width:60px;
+    height:50px;
+    background: #f9f9f9;
+    border:1px solid #f0f0f0;
+    border-radius:1px;
+    font-size:18px;
+    font-weight:normal;
+    outline:0;
+}
+button:active{
+    background-color: gray;
+}
+#screen{
+    width:240px;
+    height:73px;
+    background:#f0f0f0;
+    border:1px solid #e5e5e5;
+    border-radius:1px;
+    text-align:right;
+    font-size:50px;
+    padding:15px 15px 0px 0px;
+    
+}
